week2_k8s_enhanced/2. hands-on/kustomize/010-jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb-udp
  namespace: jitsi
spec:
  type: NodePort
  # Cluster vs Local
  externalTrafficPolicy: Cluster
  ports:
  - port: 30300
    protocol: UDP
    targetPort: 30300
    nodePort: 30300
  selector:
    k8s-app: jitsi
